fixed text overlap on CV page

--- a/src/pages/CV-Page/CV.css
+++ b/src/pages/CV-Page/CV.css
@@ -72,7 +72,7 @@ h3 {
     display: grid;
     grid-auto-flow: column;
     grid-template-rows: 2.5rem 2.5rem 2.5rem 2.5rem ;
-    grid-template-columns: 19rem 17rem 19rem;
+    grid-template-columns: 20rem 17rem 20rem;
     /* ^This is hacky as hell but I'm fed up trying to make a more elagent solution work to automatically allow for different width columns. Doing this manually at least looks good for now even if it will be janky to add to.  */
     text-align: left;
     line-height: 2rem;
